PLZ-501. API endpoint for user subscribe
